feat(book): 实现图书多文件上传和圆桌派功能优化
- 新增 uploadBookWithProgress 函数支持上传进度回调
- 将管理员图书上传功能改为支持多文件并发上传
- 实现上传进度显示列表和状态管理功能
- 重构圆桌派页面的TTS语音合成功能，优化语音分配和播放控制
- 增强圆桌派讨论流程控制，防止连续发言和优化话题引导
- 添加页面离开确认提示防止意外退出讨论
- 优化TTS语音配置参数提升朗读效果
- 更新圆桌派角色类型定义增加选中状态字段